# backend/routes/app.routes.js
@@ -3,6 +3,8 @@ const productController = require("../controllers/products.controller");
 const userController = require("../controllers/users.controller");
 const sliderController = require("../controllers/sliders.controller");
 const relatedProductController = require("../controllers/related-product.controller");
+const cartController = require("../controllers/cart.controller");
+const { authenticationToken} = require("../middleware/auth");
 
 const express = require("express");
 const router = express.Router();
@@ -30,5 +32,10 @@ router.delete("/slider/:id", sliderController.delete);
 
 router.post("/relatedProduct", relatedProductController.create);
 router.delete("/relatedProduct/:productId/:relatedProductId", relatedProductController.delete);
+
+router.post("/cart", [authenticationToken], cartController.create);
+router.get("/cart", [authenticationToken], cartController.findAll);
+router.delete("/cart", [authenticationToken], cartController.delete);
+
 
 module.exports = router;
